--- a/surfit/configure.in
+++ b/surfit/configure.in
@@ -18,6 +18,7 @@ AC_CHECK_LIB(pthread, main, [PTHREAD_INSTALLED="YES"], PTHREAD_INSTALLED="")
 AH_TEMPLATE([HAVE_THREADS],["Define if you want to compile with multithreading support"])
 AH_TEMPLATE([HAVE_NETCDF],["Define if you want to compile with GMT maps format support"])
 AH_TEMPLATE([HAVE_LIBJPEG],["Define if you want to compile with JPEG import/export support"])
+AH_TEMPLATE([HAVE_LIBPNG],["Define if you want to compile with PNG import/export support"])
 
 # check for zlib
 AC_CHECK_HEADERS(zlib.h)
@@ -26,6 +27,10 @@ AC_CHECK_LIB(z, zlibVersion, [ZLIB_INSTALLED="YES"], ZLIB_INSTALLED="")
 # check for libjpeg
 AC_CHECK_HEADERS(jpeglib.h)
 AC_CHECK_LIB(jpeg, main, [JPEG_INSTALLED="YES"], JPEG_INSTALLED="")
+
+# check for libpng
+AC_CHECK_HEADERS(png.h)
+AC_CHECK_LIB(png, main, [PNG_INSTALLED="YES"], PNG_INSTALLED="")
 
 CXXFLAGS="-O3"
 
@@ -221,6 +226,10 @@ if [[ "$JPEG_INSTALLED" = "YES" ]] ; then
 	AC_DEFINE(HAVE_LIBJPEG)
 fi
 
+if [[ "$PNG_INSTALLED" = "YES" ]] ; then
+	AC_DEFINE(HAVE_LIBPNG)
+fi
+
 AC_SUBST(TCLINCLUDE)
 AC_SUBST(TCLLIB)
 AC_SUBST(NETCDFINCLUDE)
@@ -231,6 +240,7 @@ AC_CONFIG_HEADER(config.h:config.h.in)
 AM_CONDITIONAL(HAVE_PTHREAD_INSTALLED, [test "x$PTHREAD_INSTALLED" != "x"])
 AM_CONDITIONAL(HAVE_ZLIB_INSTALLED, [test "x$ZLIB_INSTALLED" != "x"])
 AM_CONDITIONAL(HAVE_JPEG_INSTALLED, [test "x$JPEG_INSTALLED" != "x"])
+AM_CONDITIONAL(HAVE_PNG_INSTALLED, [test "x$PNG_INSTALLED" != "x"])
 AM_CONDITIONAL(MAKE_FREEFLOW,  [test "x$BUILD_FREEFLOW" != "x"])
 AM_CONDITIONAL(MAKE_GLOBE,     [test "x$BUILD_GLOBE" != "x"])
 
