--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -141,6 +141,7 @@ libsurfit_la_SOURCES += src/surfit/f_surf_ineq.cpp
 libsurfit_la_SOURCES += src/surfit/f_hist.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_ineq.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_mask.cpp                                                    
+libsurfit_la_SOURCES += src/surfit/f_mask_ineq.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_mean.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_points.cpp                                                  
 libsurfit_la_SOURCES += src/surfit/f_points_ineq.cpp                                             
@@ -228,6 +229,7 @@ libsurfit_la_HEADERS += src/surfit/f_surf_ineq.h
 libsurfit_la_HEADERS += src/surfit/f_hist.h            
 libsurfit_la_HEADERS += src/surfit/f_ineq.h            
 libsurfit_la_HEADERS += src/surfit/f_mask.h            
+libsurfit_la_HEADERS += src/surfit/f_mask_ineq.h            
 libsurfit_la_HEADERS += src/surfit/f_mean.h            
 libsurfit_la_HEADERS += src/surfit/f_points.h          
 libsurfit_la_HEADERS += src/surfit/f_points_ineq.h     
