--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -142,6 +142,10 @@ libsurfit_la_SOURCES += src/surfit/f_hist.cpp
 libsurfit_la_SOURCES += src/surfit/f_ineq.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_mask.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_mask_ineq.cpp                                                    
+libsurfit_la_SOURCES += src/surfit/f_mask_surf.cpp                                                    
+libsurfit_la_SOURCES += src/surfit/f_mask_surf_ineq.cpp                                                    
+libsurfit_la_SOURCES += src/surfit/f_mask_mean.cpp                                                    
+libsurfit_la_SOURCES += src/surfit/f_mask_wmean.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_mean.cpp                                                    
 libsurfit_la_SOURCES += src/surfit/f_points.cpp                                                  
 libsurfit_la_SOURCES += src/surfit/f_points_ineq.cpp                                             
@@ -230,6 +234,10 @@ libsurfit_la_HEADERS += src/surfit/f_hist.h
 libsurfit_la_HEADERS += src/surfit/f_ineq.h            
 libsurfit_la_HEADERS += src/surfit/f_mask.h            
 libsurfit_la_HEADERS += src/surfit/f_mask_ineq.h            
+libsurfit_la_HEADERS += src/surfit/f_mask_surf.h            
+libsurfit_la_HEADERS += src/surfit/f_mask_surf_ineq.h            
+libsurfit_la_HEADERS += src/surfit/f_mask_mean.h            
+libsurfit_la_HEADERS += src/surfit/f_mask_wmean.h            
 libsurfit_la_HEADERS += src/surfit/f_mean.h            
 libsurfit_la_HEADERS += src/surfit/f_points.h          
 libsurfit_la_HEADERS += src/surfit/f_points_ineq.h     
